--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,10 +2,11 @@ group 'com.keysking.k_ble_peripheral'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.5.21'
+    ext.kotlin_version = '1.8.0'
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://maven.google.com' }
     }
 
     dependencies {
